<resources>
    <string name="app_name">Gweiland_Task</string>
    <string name="shop">€-$hop</string>
    <string name="exchange">Exchange</string>
    <string name="launchpads">Launchpads</string>
    <string name="wallet">Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="search_cryptocurrency">Search Cryptocurrency</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="nft">NFT</string>
    <string name="top_cryptocurrency">Top Cryptocurrency</string>
    <string name="view_all">View all</string>
</resources>