<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ExchangeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/fragment_exchange_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/fragment_exchange_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/fragment_exchange_title"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/exchange"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/fragment_exchange_notification_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_notification" />

                        <ImageView
                            android:id="@+id/fragment_exchange_setting_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:src="@drawable/ic_settings" />

                    </LinearLayout>

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/fragment_exchange_lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_exchange_app_bar"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/fragment_exchange_search_view"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="3"
                android:background="@drawable/background_search_view"
                android:hint="@string/search_cryptocurrency"
                app:queryHint="Search Cryptocurrency" />

            <LinearLayout
                android:id="@+id/fragment_exchange_filter_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="55"
                android:background="@drawable/background_filter_view"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/fragment_exchange_filter_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_filter_icon" />

                <TextView
                    android:id="@+id/fragment_exchange_filter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/filter"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_exchange_lin_2"
            android:orientation="vertical"
            android:layout_below="@id/fragment_exchange_lin1"
            android:layout_marginTop="10dp">

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_exchange_tab_layout"/>
            
            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fragment_exchange_view_pager"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>